<resources>
    <string name="app_name">عناية للأطباء</string>
    <string name="settings">settings</string>
    <string name="edite_password">Edit Password</string>
    <string name="contact_us">contact us</string>
    <string name="about_us">about us</string>
    <string name="search">Search</string>
    <string name="Shift">24 Hours </string>
    <string name="go_to_location">Go To Location</string>
    <string name="prefrances">favorites</string>
    <string name="log_out">log out</string>
    <string name="more_title">more</string>
    <string name="settings_title">settings</string>
    <string name="appoint_now_txt">book now</string>
    <string name="register_txt">log in</string>
    <string name="search_item">schedule</string>
    <string name="offers_item">offers</string>
    <string name="date_item">appointments</string>
    <string name="appointments_manage">Manage Dates</string>
    <string name="search_by_name">search by name</string>
    <string name="search_by_spicialist">search by specialty</string>
    <string name="pharmacy_search">search for pharmacies</string>
    <string name="labs_search">Search for laboratories</string>
    <string name="registration_title">register now</string>
    <string name="full_name">full name</string>
    <string name="add_message">add message</string>
    <string name="flag_txt">We care about your health</string>
    <string name="mobile_number">mobile number without..0</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="date_of_birth">date of birth</string>
    <string name="gender">gender</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="save">register now</string>
    <string name="save_profile">save now</string>
    <string name="e_mail_or_mobile">e-mail or mobile number</string>
    <string name="login">login</string>
    <string name="forget_password">did you forget password?</string>
    <string name="rouls_conditions">terms and conditions</string>
    <string name="new_acount">create new account</string>
    <string name="login_facebook">login with facebook</string>
    <string name="login_twitter">login with twitter</string>
    <string name="login_google">login with google</string>
    <string name="or">OR</string>
    <string name="how_it_work">How the app works</string>
    <string name="change_language">change language</string>
    <string name="change_password">Edit your password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="appointments">schedule</string>
    <string name="favorites">favorites</string>
    <string name="fav_doc">Doctors</string>
    <string name="fav_offers">Offers</string>
    <string name="no_offers">there is no offers</string>
    <string name="no_appointments">there is no appointments</string>
    <string name="chose_doctor">Chose Doctor</string>
    <string name="no_search_results">no results</string>
    <string name="select_reagon">Chose region</string>
    <string name="cost">cost:</string>
    <string name="waiting">waiting time:</string>
    <string name="book_now">book now</string>
    <string name="chose_specialty">chose specialty</string>
    <string name="progress_txt">please wait</string>
    <string name="no_internet">No internet connection</string>
    <string name="exit">Exit</string>
    <string name="dismiss">Dismiss</string>
    <string name="search_doctor_hint">search by doctor name</string>
    <string name="doctor">Doctor:</string>
    <string name="doctorah">Doctor</string>
    <string name="lab_search_hint">Seach for labs</string>
    <string name="doctors_list">Doctors List</string>
    <string name="visitors">Visitor</string>
    <string name="profile">My Profile</string>
    <string name="waiting_time">waiting time</string>
    <string name="cost_amount">Cost</string>
    <string name="discount">Discount</string>
    <string name="date_hint">Entering the specified reservation time</string>
    <string name="booking_hint">Book now and the details will be sent in full address and clinic number</string>
    <string name="rating">Overall rating from</string>
    <string name="seen">seen</string>
    <string name="doctor_info">About doctor</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="booking_dates">Booking Dates</string>
    <string name="booking_order">Booking Order</string>
    <string name="booking_check">i am booking for another patient</string>
    <string name="language_setting">Language Settings</string>
    <string name="lang_btn">Save</string>
    <string name="ratings">Ratings</string>
    <string name="thanks">Thanks</string>
    <string name="done">Success</string>
    <string name="derham">IQD</string>
    <string name="price">price</string>
    <string name="book_price">Price</string>
    <string name="building_num">Building num:</string>
    <string name="Apartment_num">Apartment num:</string>
    <string name="help">help</string>
    <string name="cancel">cancel</string>
    <string name="map">map</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="please_enter_new_password">please enter new password</string>
    <string name="edit_password">edit password</string>
    <string name="save_btn">save</string>
    <string name="contactus_txt">We are happy to receive your inquiries and suggestions.</string>
    <string name="formorcontact">for more connect</string>
    <string name="send_message">Send</string>
    <string name="cu">contact us</string>
    <string name="by_gategory">Search by category</string>
    <string name="show_all">Show All</string>
    <string name="most_viewed">most ordered</string>
    <string name="offer_details">Offer Details</string>
    <string name="info">Information</string>
    <string name="offer_provider_data">Service Provider Info</string>
    <string name="all_categoris_title">Search by category</string>
    <string name="pharmacy_offers_title">Pharmacy offers</string>
    <string name="pharmacy">Pharmacy: </string>
    <string name="type">type: </string>
    <string name="labs_lists">Labs lists</string>
    <string name="search_by_reagon">Search by region</string>
    <string name="search_for_labs">Search for labs</string>
    <string name="search_by_nam_labs">Search by name</string>
    <string name="address">Address: </string>
    <string name="laboratory_details">Laboratory Details</string>
    <string name="test_typs">Select Test Type</string>
    <string name="avilable_dates">Available Dates</string>
    <string name="to">to: </string>
    <string name="pay_cash_in_clinic">Pay cash in clinic</string>
    <string name="laboratory">Laboratory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_summery">Schedule Summery</string>
    <string name="dont_have_account">Do not have an account? </string>
    <string name="terms_header">By create an account, you agree to the terms and conditions</string>
    <string name="pationts_list">Patients List</string>
    <string name="help_center">Help Center</string>
    <string name="show_dates_hint">Show Dates</string>
    <string name="examination">Examination</string>
    <string name="arrive">Get to the clinic</string>
    <string name="did_not_come">Did not come</string>
    <string name="am">Am</string>
    <string name="pm">Pm</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tus">Tus</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="book">Reservation</string>
    <string name="doc_info">Doctor Info</string>
    <string name="clinic_info">Clinic Info</string>
    <string name="contacts">Contacts Info</string>
    <string name="abuot_doc">About Doctor</string>
    <string name="spiciality_info">Speciality Info</string>
    <string name="about_doc_title">About Doctor</string>
    <string name="doc_contacts_title">Contacts</string>
    <string name="doc_prof_details_title">Specialty information</string>
    <string name="av_dates_title">Dates</string>
    <string name="from">from:</string>
    <string name="doctor_type">Doctor</string>
    <string name="lab_type">Laboratory</string>
    <string name="pharm_type">Pharmacy</string>
    <string name="clinic_services">Clinic Services</string>
    <string name="Newly_joined">Newly joined</string>
    <string name="phone_number">Phone number</string>
    <string name="select_user_type">Select User Type</string>
    <string name="offer_title_arabic">Offer Title (Arabic)</string>
    <string name="offer_title_english">Offer Title (English)</string>
    <string name="offer_image">Offer Image</string>
    <string name="add_offer">Add Offer</string>
    <string name="unit_num">Units Number</string>
    <string name="description_english">Description(English)</string>
    <string name="description_arabic">Description(Arabic)</string>
    <string name="device_name">Device Name(Arabic)</string>
    <string name="device_name_english">Device Name(English)</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="select_service">Select Service</string>
    <string name="select_sub_service">Select Sub service</string>
    <string name="select_unit">Select Unit</string>
    <string name="first_name_arabic">first name (arabic)</string>
    <string name="first_name_english">first name (english)</string>
    <string name="last_name_arabic">last name (arabic)</string>
    <string name="last_name_english">last name (english)</string>
    <string name="number_of_days">number of working days</string>
    <string name="about_doctor_arabic">about doctor (arabic)</string>
    <string name="about_doctor_english">about doctor (english)</string>
    <string name="about_lab_english">about Lab (english)</string>
    <string name="about_lab_arabic">about Lab (arabic)</string>
    <string name="profional_title_arabic">professional title (arabic)</string>
    <string name="professional_title_english">professional title (english)</string>
    <string name="profile_image">profile image</string>
    <string name="laboratory_name_arabic">laboratory name (arabic)</string>
    <string name="laboratory_name_english">laboratory name (english)</string>
    <string name="pharmacy_name_arabic">pharmacy name (arabic)</string>
    <string name="pharmacy_name_english">pharmacy name (english)</string>
    <string name="clinic_address">Clinic Address</string>
    <string name="details">Details</string>
    <string name="sub_speciality">sub speciality</string>
    <string name="speciality">speciality</string>
    <string name="reservations_managment">Appointment management</string>
    <string name="Clinic_opening_times">Clinic opening times</string>
    <string name="vacation_dates">Vacation dates</string>
    <string name="edit_working_dates">Edit Working Dates</string>
    <string name="working_dates">Working Dates</string>
    <string name="min">minute</string>
    <string name="dates_list">Reservations List</string>
    <string name="add_doc_offer_title1">1. Describe your offer by selecting Category, Subcategory, Service</string>
    <string name="offer_title2_sevice">2. Choose the type of service and sub-service</string>
    <string name="setion_title">3. Choose the session and number of units</string>
    <string name="device_name_title">4. Add the device name</string>
    <string name="offfer_title">5. Add your display title</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="register_from_here">Register here</string>
</resources>