<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/gray_light"
    tools:context=".modules.registration.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text=" تسجيل الدخول"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="80dp"
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="50dp"
                    android:src="@drawable/new_logo_dark" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconTint="@color/colorAccent"
                        app:startIconDrawable="@drawable/phone_blue_ic">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            app:startIconTint="@color/colorAccent"
                            android:backgroundTint="#00E6E7ED"
                            android:ems="10"
                            android:textSize="14sp"
                            android:hint="@string/mobile_number"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_pass_word_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:startIconTint="@color/colorAccent"
                        app:startIconDrawable="@drawable/password_ic">

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:textSize="14sp"
                            android:layout_centerVertical="true"
                            android:backgroundTint="#00E6E7ED"
                            android:hint="@string/password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <Button
                    android:id="@+id/Login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="5dp"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"/>
                    <TextView
                        android:id="@+id/registration_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/register_from_here"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                         />
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:background="#0333C8"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="#0333C8"
                            android:orientation="horizontal"

                            >

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:src="@drawable/fb_ic" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="#fff" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/login_facebook"
                                android:textColor="#fff"
                                android:textSize="14sp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="5dp"
                        android:background="#F44336"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="#F44336"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:src="@drawable/google_ic" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="#fff" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textSize="14sp"
                                android:text="@string/login_google"
                                android:textColor="#fff"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/login_progrss_lay"
            layout="@layout/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>